k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress-service
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/rewrite-target: /$1
        cert-manager.io/cluster-issuer: "letsencrypt-prod"
        nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
    tls:
        - hosts:
            - potedepringles.tv
            - wwww.potedepringles.tv
          secretName: potedepringles-tv
    rules:
        - host: potedepringles.tv
          http:
            paths:
                - path: /?(.*)
                  backend:
                    serviceName: client-cluster-ip-service
                    servicePort: 3000
                - path: /api/?(.*)
                  backend:
                    serviceName: server-cluster-ip-service
                    servicePort: 5000
        - host: www.potedepringles.tv
          http:
            paths:
                - path: /?(.*)
                  backend:
                    serviceName: client-cluster-ip-service
                    servicePort: 3000
                - path: /api/?(.*)
                  backend:
                    serviceName: server-cluster-ip-service
                    servicePort: 5000
